JUNIPER-ONLY: bind ip to interfaces

--- a/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.management.cfg
+++ b/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.management.cfg
@@ -25,11 +25,13 @@
 # Port of the registry for the exported RMI service
 #
 rmiRegistryPort = 11099
+RegistryHost = 127.0.0.1
 
 #
 # Port of the registry for the exported RMI service
 #
 rmiServerPort = 44444
+rmiServerHost = 127.0.0.1
 
 #
 # Name of the JAAS realm used for authentication
@@ -39,7 +41,7 @@ jmxRealm = karaf
 #
 # The service URL for the JMXConnectorServer
 #
-serviceUrl = service:jmx:rmi://0.0.0.0:${rmiServerPort}/jndi/rmi://0.0.0.0:${rmiRegistryPort}/karaf-${karaf.name}
+serviceUrl = service:jmx:rmi://127.0.0.1:${rmiServerPort}/jndi/rmi://127.0.0.1:${rmiRegistryPort}/karaf-${karaf.name}
 
 #
 # Whether any threads started for the JMXConnectorServer should be started as daemon threads
