--- a/opennms-base-assembly/src/main/filtered/etc/opennms.properties
+++ b/opennms-base-assembly/src/main/filtered/etc/opennms.properties
@@ -276,7 +276,7 @@ org.opennms.netmgt.jetty.port = 8980
 # By default, Jetty will listen on all interfaces. You can set a specific
 # bind address here. If you set this to a value other than 127.0.0.1,
 # you will need to update the rtc-client and map-client URLs above.
-org.opennms.netmgt.jetty.host = jmp-CLUSTER
+#org.opennms.netmgt.jetty.host = 127.0.0.1
 # 
 # This enables NCSA style request logging in ${opennm.home}/logs
 #
@@ -310,7 +310,7 @@ org.eclipse.jetty.server.Request.maxFormKeys=2000
 org.opennms.netmgt.jetty.https-port = 9443
 # By default, if configured for HTTPS, Jetty will listen on all interfaces.
 # You can set a specific bind address here.
-org.opennms.netmgt.jetty.https-host = jmp-CLUSTER
+#org.opennms.netmgt.jetty.https-host = 127.0.0.1
 ## To set the keystore file from which Jetty will retrieve its SSL key,
 ## change the value of this property. Note that the jetty.properties
 ## distributed with OpenNMS should never be used in production.
