--- a/opennms-base-assembly/src/main/filtered/etc/opennms.properties
+++ b/opennms-base-assembly/src/main/filtered/etc/opennms.properties
@@ -248,7 +248,7 @@ opennms.event.purge.limit = 50000
 # The base of a URL that RTC clients use when creating a RTC subscription URL.
 # If you are using Tomcat instead of the built-in Jetty, change this in
 # WEB-INF/configuration.properties instead.
-opennms.rtc-client.http-post.base-url = http://localhost:8980/opennms/rtc/post
+opennms.rtc-client.http-post.base-url = http://jmp-CLUSTER:8980/opennms/rtc/post
 
 # The username the RTC uses when authenticating itself in an HTTP POST.
 opennms.rtc-client.http-post.username = rtc
@@ -260,7 +260,7 @@ opennms.rtc-client.http-post.password = rtc
 # The base of a URL that Map System clients use when creating a Map subscription URL.
 # If you are using Tomcat instead of the built-in Jetty, change this in
 # WEB-INF/configuration.properties instead.
-opennms.map-client.http-post.url = http://localhost:8980/opennms/map/post
+opennms.map-client.http-post.url = http://jmp-CLUSTER:8980/opennms/map/post
 
 # The username the Map System uses when authenticating itself in an HTTP POST.
 opennms.map-client.http-post.username = map
